added some stuff to ghci config

--- a/configs/ghci.conf
+++ b/configs/ghci.conf
@@ -1,1 +1,4 @@
 :set prompt "\ESC[33mλ ghci \ESC[32m%s \ESC[33m→ \ESC[m"
+:def str (const . pure $ ":seti -XOverloadedStrings")
+:def unstr (const . pure $ ":unset -XOverloadedStrings")
+:def exit (const . pure $ ":q")
